--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "test": "roadhog test",
     "test:component": "roadhog test ./src/components",
     "test:all": "node ./tests/run-tests.js",
-    "prettier": "prettier --write ./src/**/**/**/*"
+    "prettier": "prettier --write ./src/**/**/**/*",
+    "test-jest": "jest"
   },
   "dependencies": {
     "@antv/data-set": "^0.9.0",
     "@babel/polyfill": "^7.0.0-beta.36",
     "antd": "^3.8.0",
+    "babel-core": "^6.26.3",
     "bizcharts": "^3.1.10",
     "bizcharts-plugin-slider": "^2.0.1",
     "classnames": "^2.2.5",
@@ -68,6 +70,7 @@
     "eslint-plugin-react": "^7.0.1",
     "gh-pages": "^1.0.0",
     "husky": "^0.14.3",
+    "jest": "^23.5.0",
     "lint-staged": "^7.2.0",
     "mockjs": "^1.0.1-beta3",
     "prettier": "1.14.2",
